Layout07: Polish video carousel, fix image cropping

--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -109,70 +109,3 @@
 	width: 60%;
 	padding-left: 3%;
 }
-
-/* RB Agency Layout 7 */
-#rblayout-seven #stats h1 {
-	margin-bottom: 30px;
-}
-#rblayout-seven #profile-slider .slides > li .rbmulti {
-	width: 50%;
-	float: left;
-}
-#rblayout-seven #profile-carousel .slides > li {
-	margin-right: 10px;
-}
-#rblayout-seven #profile-carousel .slides > li:last-child {
-	margin-right: 0px;
-}
-#rblayout-seven #profile-carousel .slides > li figure {
-	height: 100px;
-}
-#rblayout-seven #profile-carousel .slides > li figure span {
-	float: left;
-	width: 100%;
-	height: 100%;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: top center;
-}
-#rblayout-seven #profile-carousel .slides > li figure.rbmulti span {
-	width: 50%;
-}
-#rblayout-seven #videos-carousel .slides > li {
-	margin-right: 10px;
-}
-#rblayout-seven #videos-carousel .slides > li:last-child {
-	margin-right: 0px;
-}
-#rblayout-seven #videos-carousel .slides > li figure {
-	height: 90px;
-}
-#rblayout-seven #videos-carousel .slides > li figure span {
-	float: left;
-	width: 100%;
-	height: 100%;
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: top center;
-}
-#rblayout-seven #profile-links {
-	padding: 15px 0px;
-	text-align: right;
-}
-#rblayout-seven #profile-links li {
-	padding: 0px 5px;
-	display: inline-block;
-}
-#rblayout-seven #profile-links li a {
-	text-decoration: none;
-}
-#rblayout-seven .rbtab-content .flexslider,
-#rblayout-seven .rbtab-content #experience,
-#rblayout-seven .rbtab-content #media-tab {
-	padding: 15px;
-	background: #fff;
-}
-#rblayout-seven #media-tab ul li a {
-	line-height: 18px;
-	text-decoration: none;
-}
